extends Control



func _on_fire_demon_button_pressed() -> void:
	get_tree().change_scene_to_file("uid://c5lyk0s0rvu5i")

func _on_salt_pepper_button_pressed() -> void:
	get_tree().change_scene_to_file("uid://doqfy3mapatxr")

func _on_jim_jam_button_pressed() -> void:
	get_tree().change_scene_to_file("uid://41o205menflr")

func _on_forest_button_pressed() -> void:
	get_tree().change_scene_to_file("uid://crevw44gy8m6l")

func _on_galaxy_boss_button_pressed() -> void:
	pass # Replace with function body.


func _on_close_button_pressed() -> void:
	visible = false
